# aoc16

./: .gitignore  CMakeLists.txt  README.md  dexel2.cpp  dexel2.h  main.cpp
input/: day22_input.txt
mathematica/day01/: AoC01.nb
mathematica/day02/: AoC02.nb
mathematica/day03/: AoC03.nb
mathematica/day04/: AoC04.nb
mathematica/day05/: AoC05.nb
mathematica/day06/: AoC06.nb
mathematica/day07/: AoC07.nb
mathematica/day08/: AoC08.nb
mathematica/day09/: AoC09.nb
mathematica/day10/: AoC10.nb
mathematica/day11/: AoC11.nb
mathematica/day12/: AoC12.nb
mathematica/day13/: AoC13.nb
mathematica/day15/: AoC15.txt
mathematica/day16/: AoC16.nb
mathematica/day19/: AoC19.nb
mathematica/day24/: AoC24.nb
